[package]
name = "nacho_os"
version = "0.1.0"
edition = "2018"
authors = ["Luis Ignacio Gomez"]

[dependencies]

# the profile used for 'cargo run'
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# profile used for 'cargo build --release'
[profile.release]
panic = "abort" # disable stack unwinding on panic